2004-06-29  Vince Darley <vincentdarley@sourceforge.net>

	* library/zipvfs.tcl: fix to bug finding zip header (reported on
	Tcl'ers wiki).

2004-06-09  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in: corrected targets that use 'for' over what may be
	an empty list.  Cleaned up echo output.

	* generic/vfs.c (Vfs_Init): added #ifndef PACKAGE_VERSION for
	non-TEA based build system.

2004-06-04  Jeff Hobbs  <jeffh@ActiveState.com>

	* examples/simpleExamples.tcl:
	* tests/vfsUrl.test: s/scriptics.com/tcl.tk

	* library/zipvfs.tcl (zip::Data): add zip::stat call that
	correctly determines size for some zip files (Ferril).

	* generic/vfs.c: use PACKAGE_VERSION instead of hard-coded version
	info.

	* configure, configure.in, Makefile.in, tclconfig/tcl.m4: updated
	to the latest TEA3 spec
	* pkgIndex.tcl.in (added): move from library/ subdir
	* library/pkgIndex.tcl.in (removed): 

2004-06-03  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure (regened):
	* tclconfig/tcl.m4 (TEA_TCL_64BIT_FLAGS): update to define
	TCL_WIDE_INT_IS_LONG when 'using long'.

2004-05-21  Vince Darley <vincentdarley@sourceforge.net>

	* win/makefile.vc: fix to compilation problem with new #includes
	in Tcl 8.5.

2004-05-21  Daniel Steffen <das@users.sourceforge.net>

	* library/starkit.tcl: improved previous symbolic link patch by
	using [vfs::filesystem fullynormalize], as suggessted by Vince.
	
	* library/pkgIndex.tcl.in: brought back into sync with pkgIndex.tcl
	* library/pkgIndex.tcl: fixed spacing to be like pkgIndex.tcl.in

2004-05-19  Jean-Claude Wippler  <jcw@equi4.com>

	* library/starkit.tcl: added a patch from Bryan Schofield to properly
	resolve all symbolic links so starkit::startup detection works.
	* library/pkgIndex.tcl: bumped starkit version from 1.3 to 1.3.1

	* ChangeLog: cleaned up a few tab-vs-space indentations

2004-04-18  Daniel Steffen <das@users.sourceforge.net>

	* generic/vfs.c: continue to #include tclPort.h, otherwise
	compilation breaks against tcl 8.4.x.
